[project]
name = "tdd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.8"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort import sorting
    "W",   # pycodestyle warnings
    "ANN", # flake8-annotations: enforce type annotations
    "SIM", # flake8-simplify: suggest simpler code patterns
    "W",   # pycodestyle warnings (duplicate of line 5, but harmless)

]

# If warning hints are annoying while coding, check their type and disable them
# They'll still be fixed when you save or run 'ruff check --fix .'
ignore = [
    "I001",   # unsorted-imports
    "E201",   # ignore whitespace after '(' warning
    "E202",   # ignore whitespace before ')' warning
    "E241",   # allow multiple spaces for alignment
    "E272",   # allow multiple spaces before keyword
    "E231",   # missing whitespace after comma
    "W291",   # trailing whitespace
    "W293",   # line contains whitespace
    "E501",   # ignore line too long warning
    "D107",   # ignore missing docstring in __init__
    "C901",   # too complex
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B008",   # Do not perform function call in argument defaults (needed for FastAPI Depends)
    "E722",   # bare except: (e.g. `except:` without specifying exception type)
    "ANN003", # Missing type annotation for **kwargs (passed to parent class, can't be typed precisely)
    "ANN401", # Dynamically typed Any is disallowed - too strict for kwargs and generic containers
]
unfixable = ["F401", "F841"] # unused-import, unused-variable


[tool.ruff.lint.isort]
order-by-type = true
force-single-line = false
lines-after-imports = 2
combine-as-imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
